# AMORE-PACIFIC-RAG-KG-HYBRID-AGENT-

./: (1) K-뷰티 초격차의 서막 [풀영상] _ 창 534회 (KBS 26.1.20.) - YouTube.md  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AMORE_Analyst_Report_2026-01-14_2026-01-25 (3).docx.md  ARCHITECTURE.md  Agent Tools & Interoperability with MCP 핵심요약.docx  CLAUDE.md  Context Engineering_ Sessions & Memory 핵심정리.docx  DEPENDENCY_ANALYSIS.txt  DEPENDENCY_GRAPH.txt  DEPENDENCY_INDEX.md  DEPENDENCY_SUMMARY.txt  Dockerfile  EMBEDDING_CACHE_SUMMARY.md  FILE_IMPORT_MAP.txt  HANDOFF.md  IMPLEMENTATION_SUMMARY_H.1.3.md  Indicator Combination Playbook.md  LICENSE  PROJECT_PLAN.md  README.md  README_EN.md  README_KO.md  REFACTOR_PLAN.md  SECURITY_AUDIT_REPORT.md  Strategic Indicators Definition.md  THIRD_PARTY_LICENSES.md  TODO.md  _Introduction to Agents_ 핵심 정리.docx  amore_unified_dashboard_v4.html  dashboard_api.py  data_flow_diagram.xml  export_dashboard.py  generate_insight_sample.py  main.py  (+16 more)
.claude/: CATEGORY_HIERARCHY_FEATURE.md  IMPLEMENTATION_SUMMARY.md  settings.json
.omc/: continuation-count.json  ultrawork-state.json
_deprecated/: README.md
agents/: __init__.py  alert_agent.py  chatbot_agent.py  hybrid_chatbot_agent.py  insight_agent.py  query_agent.py  storage_agent.py  workflow_agent.py
config/: AGENTS.md  asin_brand_mapping.json  brands.json  category_hierarchy.json  competitors.json  entities.json  feature_flags.json  proxy_config.example.json  public_apis.json  retrieval_weights.json  rules.json  thresholds.json  tracked_competitors.json
core/: brain.py  cache.py  context_gatherer.py  crawl_manager.py  llm_orchestrator.py  simple_chat.py  state.py  state_manager.py
dashboard/: AGENTS.md  MODAL_REDESIGN_SUMMARY.md  amore_unified_dashboard_v3.html  amore_unified_dashboard_v4.html
data/: dashboard_data.json
diagrams/: data_workflow_flow.xml  decision_flow.xml
docs/: AMOREPACIFIC_DESIGN_SYSTEM.md  API_DESIGN_REVIEW.md  AuditReport.md  CATEGORY_EXPANSION_GUIDE.md  CORE_ARCHITECTURE_DEEP_DIVE.md  CRAWLING_DO_NOT_TOUCH.md  DATA_COLLECTION_POLICY.md  IMPLEMENTATION_SUMMARY_H.1.3.md  (+23 more)
(+607 files in other folders)
